Add bullet gem and check N+1 query && update api doc
